$Id$

MIDIbox Seq Dr V1.3
~~~~~~~~~~~~~~~~~~~

   o the MIDIbox 808 application has been renamed to the more generic name "MIDIbox SEQ Dr"

   o added setup_seq_dr_default which is prepared for the MBSEQDR PCB

   o accent track now also increases velocity of outgoing MIDI notes


TODO:
   o accent via DOUTs



MIDIbox 808 V1.2
~~~~~~~~~~~~~~~~

  o Groove function now takes the global step has reference instead of the local step.
    This results into better results on a non-linear step progression.

  o Synch-to-Measure working as intended again

  o Options Page: added Synched Section Change option (GP button #3)

  o Options Page: added Synched Pattern Change option (GP button #4)

  o Pattern page: GP LEDs of currently played pattern are flashing to the beat

  o press SHIFT and move Instrument encoder to rotate a pattern


MIDIbox 808 V1.1c
~~~~~~~~~~~~~~~~~

   o Bugfix for MIDI Output (some note off events were filtered)


MIDIbox 808 V1.1b
~~~~~~~~~~~~~~~~~

   o GP LEDs now show track activity in Mute page


MIDIbox 808 V1.1a
~~~~~~~~~~~~~~~~~

   o built for MIOS V1.9g (or higher) to support new encoder types.
     Rotary encoders won't work with older MIOS versions!


MIDIbox 808 V1.1
~~~~~~~~~~~~~~~~

   o steps per measure can now be selected in the previous "spare page"
     Values: 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32
     In song/chain mode, the value defines after how many steps the next
     pattern is selected.


MIDIbox 808 V1.0
~~~~~~~~~~~~~~~~

   o initial version